<resources>
    <string name="app_name">Shifa\'a</string>

    <!-- reset password screen -->
    <string name="reset_password">Reset Password</string>
    <string name="select_which_contact_details_should_we_use_to_reset_your_password">Select which contact details should we use to reset your password</string>
    <string name="via_sms">via SMS:</string>
    <string name="via_email">via Email:</string>
    <string name="Continue">Continue</string>
    <!-- reset password screen -->


    <!-- sign in screen -->
    <string name="welcome_to_shefa_a">Welcome to Shefa`a</string>
    <string name="welcome_to_shefa_a_patient">Dear Patient\nWelcome to Shefa`a</string>
    <string name="welcome_to_shefa_a_doctor">Dear Doctor\nWelcome to Shefa`a</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="email_address_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset">Reset</string>
    <!-- sign in screen -->

    <!-- OTP screen -->
    <string name="otp_code_verification">OTP Code Verification</string>
    <string name="code_has_been_send_to">Code has been send to</string>
    <string name="resend_code_in">Resend code in</string>
    <string name="verify">Verify</string>
    <!-- OTP screen -->

    <!-- sign up patient -->
    <string name="male_signup_patient">Male</string>
    <string name="female_signup_patient">Female</string>
    <string name="patient_details_signup_patient">Patient Details</string>
    <string name="patient_s_name_signup_patient">Patient\'s Name</string>
    <string name="age_signup_patient">Age</string>
    <string name="gender_signup_patient">Gender</string>
    <string name="email_signup_patient">Email</string>
    <string name="mobile_number_signup_patient">Mobile Number</string>
    <string name="password_signup_patient">Password</string>
    <string name="confirm_password_signup_patient">Confirm Password</string>
    <string name="hint_confirm_password_signup_patient">Confirm Password</string>
    <string name="confirm_signup_patient">Confirm</string>
    <string name="hint_password_signup_patient">Password</string>
    <string name="hint_last_name_signup_patient">Last Name</string>
    <string name="hint_first_name_signup_patient">First Name</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <!-- sign up patient -->


    <!-- sign up as a doctor screen -->
    <string name="doctor_details">Doctor Details</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="specialty">Specialty</string>
    <string name="choose_your_specialty">Choose your specialty</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="email">Email</string>
    <string name="doctor_example_com">Doctor@Example.com</string>
    <string name="password">Password</string>
    <string name="hint_password">************</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <!-- sign up as a doctor screen -->


    <!-- List of specialty (Doctor) -->
    <string-array name="specialty">
        <item>Dermatology</item>
        <item>Dentistry</item>
        <item>Psychiatry</item>
        <item>Pediatrics and New Born</item>
        <item>Neurology</item>
        <item>Orthopedics</item>
        <item>Gynaecology and Infertility</item>
        <item>Ear, Nose and Throat</item>
        <item>Cardiology and Vascular Disease</item>
        <item>Allergy and Immunology</item>
        <item>Andrology and Male Infertility</item>
        <item>Audiology</item>
        <item>Cardiology and Thoracic Surgery</item>
        <item>Chest and Respiratory</item>
        <item>Diabetes and Endocrinology</item>
        <item>Diagnostic Radiology</item>
        <item>Dietitian and Nutrition</item>
        <item>Family Medicine</item>
        <item>Gastroenterology and Endoscopy</item>
        <item>General Practice</item>
        <item>General Surgery</item>
        <item>Geriatrics</item>
        <item>Hematology</item>
        <item>Hepatology</item>
        <item>Internal Medicine</item>
        <item>IVF and Infertility</item>
        <item>Laboratories</item>
        <item>Nephrology</item>
        <item>Obesity and Laparoscopic Surgery</item>
        <item>Oncology</item>
        <item>Oncology Surgery</item>
        <item>Ophthalmology</item>
        <item>Osteopathy</item>
        <item>Pain Management</item>
        <item>Pediatric Surgery</item>
        <item>Phoniatrics</item>
        <item>Plastic Surgery</item>
        <item>Rheumatology</item>
        <item>Spinal Surgery</item>
        <item>Urology</item>
        <item>Vascular Surgery</item>
    </string-array>
    <!-- List of specialty (Doctor) -->


    <!--Reset Password screen -->
    <string name="create_new_password">Create New Password</string>
    <string name="create_your_new_password">Create Your New Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="reset_password_btn_text">Reset Password</string>
    <!--Reset Password screen -->


    <!-- OnBoarding Screens -->
    <string name="onboarding_first_text"><![CDATA[Thouthands of doctors & experts\n to help you and keep your health in check!]]></string>
    <string name="onboarding_second_text"><![CDATA[Health checks &\n consultations easily anywhere anytime]]></string>
    <string name="onboarding_third_text"><![CDATA[Start living\n healthy & well\n with us right now!]]></string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <!-- OnBoarding Screens -->


    <!-- sign up role -->
    <string name="i_am">I am :</string>
    <string name="patient">PATIENT</string>
    <string name="doctor">DOCTOR</string>
    <!-- sign up role -->


    <!-- months -->
    <string-array name="month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- months -->

    <string-array name="medicine_type">
        <item>Capsule</item>
        <item>Tablets</item>
        <item>Drops</item>
        <item>Liquid</item>
        <item>Spray</item>
        <item>Injection</item>
        <item>Topical</item>
        <item>Inhale</item>
    </string-array>

    <string-array name="blood_types">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

</resources>