<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.auth.onboarding.screens.OnBoardingSecondFragment">


    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_on_boarding_second_xml_constraintlayout2_scene">

        <ImageView
            android:id="@+id/iv_onBoarding_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/onboarding_two"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_onboarding_second_skip"
            style="@style/onboarding_skip_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/skip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_onboarding_second_next" />

        <Button
            android:id="@+id/btn_onboarding_second_next"
            style="@style/button_main_style"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_onBoarding_second_dots" />

        <ImageView
            android:id="@+id/iv_onBoarding_second_dots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:src="@drawable/onboarding_two_dots"
            app:layout_constraintEnd_toEndOf="@+id/btn_onboarding_second_next"
            app:layout_constraintStart_toStartOf="@+id/btn_onboarding_second_next"
            app:layout_constraintTop_toBottomOf="@+id/tv_onBoarding_second_text" />

        <TextView
            android:id="@+id/tv_onBoarding_second_text"
            style="@style/onboarding_text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/onboarding_second_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_onBoarding_second" />
    </androidx.constraintlayout.motion.widget.MotionLayout>
</ScrollView>